# Dominator

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  common.css  go.mod  go.sum
.github/workflows/: release.yml
cmd/ami-publisher/: README.md  addVolumes.go  copyBootstrapImage.go  delete.go  deleteTags.go  expire.go  importKeyPair.go  launchInstances.go  listImages.go  listStreams.go  listUnpackers.go  main.go  prepareUnpackers.go  publish.go  removeUnusedVolumes.go  setExclusiveTags.go  setTags.go  startInstances.go  stopIdleUnpackers.go  terminateInstances.go  unusedImages.go  usedImages.go
cmd/builder-tool/: README.md  buildImage.go  buildRaw.go  disable.go  enable.go  getDependencies.go  getDirectedGraph.go  main.go  manifest.go  replaceIdleSlaves.go  startAutoBuilds.go  stub.go
cmd/disruption-manager/: README.md  health-check.yml  httpd.go  main.go  manager.go  manager_test.go  rpcd.go
cmd/dominator/: README.md  main.go
cmd/domtool/: README.md  clearSafetyShutoff.go  configureSubs.go  dial.go  disableUpdates.go  disruption.go  enableUpdates.go  fastUpdate.go  forceDisruptiveUpdate.go  getDefaultImage.go  getInfoForSubs.go  getMachineMdb.go  getMdb.go  getMdbUpdates.go  getSubsConfiguration.go  lib.go  listSubs.go  main.go  pauseSubUpdates.go  processMdbTemplate.go  resumeSubUpdates.go  setDefaultImage.go
cmd/filegen-client/: main.go
cmd/filegen-server/: README.md  main.go
cmd/fleet-manager/: README.md  main.go
cmd/fs2objectcache/: main.go
cmd/fsbench/: main.go
cmd/fsreadslow/: main.go
cmd/hyper-control/: README.md  addAddress.go  addSubnet.go  changeTags.go  connectToVmManager.go  disableHypervisor.go  enableHypervisor.go  getCapacity.go  getIdentityProvider.go  getMachineInfo.go  getPublicKey.go  getUpdates.go  holdLock.go  lib.go  (+19 more)
init.d/: disruption-manager.service  dominator.Debian-7  dominator.service  filegen-server.service  hypervisor.Debian-7  hypervisor.service  image-unpacker.service  imageserver.Debian-7  imageserver.service  imaginator.service  mdbd.service  subd.service
rust/: README.md
rust/lib/srpc/client/: Cargo.toml  README.md  pyproject.toml  srpc_client.pyi
rust/lib/srpc/client/examples/: README.md  python_client_example.py  python_client_example2.py  python_client_example3.py  python_client_example4.py  rust_client_example.rs  rust_client_example2.rs  rust_client_example3.rs  rust_client_example4.rs
rust/lib/srpc/client/src/: chunk_limiter.rs  lib.rs  python_bindings.rs
rust/lib/srpc/client/src/tests/: lib.rs
scripts/: get-remote-hostname  install.lib  list-methods  make-cert  make-tarball  make-website  setup-scratch-imaginator  version.lib
user-guide/: getting-started.md  image-manifest.md
(+896 files in other folders)
